--- a/src/components/currentWeather/currentWeather.css
+++ b/src/components/currentWeather/currentWeather.css
@@ -1,7 +1,7 @@
 .current-weather-container {
     /* border: 3px solid green; */
     margin: auto;
-    width: 50%;
+    /* width: 50%; */
     padding: 10px;
     display: flex;
     
