--- a/src/components/forecast/forecast.css
+++ b/src/components/forecast/forecast.css
@@ -1,7 +1,7 @@
 .forecast-container {
   /* border: 3px solid blue; */
     margin: auto;
-    width: 50%;
+    /* width: 50%; */
     display: flex;
   }
   .forecast-inner-container {
