--- a/src/index.css
+++ b/src/index.css
@@ -56,3 +56,11 @@ h4 {
 p {
     color:orangered;
 }
+
+.container {
+  /* border: 3px solid blue; */
+  display:block;
+  padding: 10px;
+  margin: auto;
+  width: 50%;
+}
